small slider index.html

--- a/src/index.html
+++ b/src/index.html
@@ -74,15 +74,25 @@
     <section class="content">
       <article class="content--qoute">
         <span>“</span>
-        <p class="lead">
+        <p class="lead active">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae magni
           sunt tempora veritatis consectetur odit at explicabo reiciendis quasi
           eligendi, volupta
         </p>
+        <p class="lead">
+          Adipisicing elit. Vitae magni Lorem ipsum dolor sit, amet consectetur
+          a sunt tempora veritatis consectetur odit at explicabo reiciendis
+          quasi eligendi, volupta
+        </p>
+        <p class="lead">
+          Consectetur odit at explicabo reiciendis quasi eligendi, volupta Lorem
+          ipsum dolor sit, amet consectetur adipisicing elit. Vitae magni sunt
+          tempora veritatis
+        </p>
         <span>”</span>
         <div class="buttons">
-          <div class="right">&#60;</div>
-          <div class="left">&#62;</div>
+          <div class="right-btn-lead">&#60;</div>
+          <div class="left-btn-lead">&#62;</div>
         </div>
       </article>
       <article class="content--info">
