--- a/src/resources.html
+++ b/src/resources.html
@@ -86,8 +86,8 @@
 
     <section class="forms">
       <!-- 1. Donate -->
-      <div class="donate-view active">
-        <div class="forms--about">
+      <div class="forms--container donate-view active">
+        <div class="forms--container--input">
           <h2>About you</h2>
           <form>
             <ul>
@@ -166,8 +166,8 @@
         </div>
       </div>
       <!-- 2. Personal -->
-      <div class="personal-view">
-        <div class="personal-details">
+      <div class="forms--container personal-view">
+        <div class="forms--container--input personal-details">
           <h2>Personal details</h2>
           <form>
             <ul>
@@ -219,7 +219,7 @@
             </ul>
           </form>
         </div>
-        <div class="billing-address">
+        <div class="forms--container--input billing-address">
           <h2>Billing address</h2>
           <form>
             <ul>
@@ -287,8 +287,8 @@
         </div>
       </div>
       <!-- 3. Donation infor -->
-      <div class="donation-info-view">
-        <div class="donation-information">
+      <div class="forms--container donation-info-view">
+        <div class="forms--container--input donation-information">
           <h2>Donation information</h2>
           <p>
             If you are not the acount holder or require an additional signatory
@@ -391,7 +391,7 @@
             </ul>
           </form>
         </div>
-        <div class="gift-aid">
+        <div class="forms--container--text gift-aid">
           <h2>Gift aid</h2>
 
           <p class="info">
@@ -421,8 +421,8 @@
         </div>
       </div>
       <!-- 4. Payment -->
-      <div class="payment-view">
-        <div class="payment-details">
+      <div class="forms--container payment-view">
+        <div class="forms--container--input payment-details">
           <h2>Payment details</h2>
           <form>
             <ul class="left-col">
@@ -536,7 +536,7 @@
         </div>
       </div>
       <!-- 5. Confirmation -->
-      <div class="confirmation-viwe">
+      <div class="forms--container confirmation-viwe">
         <div class="thanks">
           <h2>Thank you!</h2>
           <div class="wrap">
